--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Executable.loader.js";
+      var loaderUrl = buildUrl + "/Into-the-void.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Executable.data",
-        frameworkUrl: buildUrl + "/Executable.framework.js",
-        codeUrl: buildUrl + "/Executable.wasm",
+        dataUrl: buildUrl + "/Into-the-void.data",
+        frameworkUrl: buildUrl + "/Into-the-void.framework.js",
+        codeUrl: buildUrl + "/Into-the-void.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Into the void",
